# SimDesign_SOFA

./: .gitignore
SofaKernel/framework/sofa/core/loader/: Material.h
applications/plugins/: CMakeLists.txt
applications/plugins/Geomagic/scenes/: Geomagic-Demo.scn
applications/plugins/Sensable/examples/: CameraAlignment.scn
applications/plugins/SerialComunication/: CMakeLists.txt  SerialComunicationConfig.cmake.in  SerialDriver.cpp  SerialDriver.h  initSerial.cpp
applications/plugins/SimDesignCNVSS/: CMakeLists.txt  CNVSSTesting.cpp  CNVSSTesting.h  MeshGmshLoaderCNVSS.cpp  MeshGmshLoaderCNVSS.h  MeshLoaderCNVSS.cpp  MeshLoaderCNVSS.h  NetworkControllerCNVSS.cpp  NetworkControllerCNVSS.h  PointNet.cpp  PointNet.h  TetrahedralCorotationalFEMForceFieldCNVSS.cpp  TetrahedralCorotationalFEMForceFieldCNVSS.h  TetrahedralCorotationalFEMForceFieldCNVSS.inl  initSimDesignCNVSS.cpp  initSimDesignCNVSS.h
applications/plugins/ZeroMQCommunication/: CMakeLists.txt  Client.cpp  Client.h  PointNet.cpp  PointNet.h  README.md  SerialDriver.cpp  SerialDriver.h  SofaTypeMessages.cpp  SofaTypeMessages.h  SurgicalProtocol.cpp  SurgicalProtocol.h  SurgicalProtocolV3.cpp  SurgicalProtocolV3.h  Test.scn  TetrahedralCorotationalFEMForceFieldCNVSS.cpp  TetrahedralCorotationalFEMForceFieldCNVSS.h  TetrahedralCorotationalFEMForceFieldCNVSS.inl  ZMQClientComponent.cpp  ZMQClientComponent.h  ZMQServerComponent.cpp  ZMQServerComponent.h  ZeroMQCommunicationConfig.cmake.in  initZeroMQCommunication.cpp  initZeroMQCommunication.h  testIdentity.py
applications/plugins/ZeroMQCommunication/Client/: rrclient.cpp  rrclient.out
applications/plugins/ZeroMQCommunication/NetworkManager/: pull-pub-server.py  router.py  rrbroker.py
applications/plugins/ZeroMQCommunication/OtherNonSofaClients/: client1.cpp  client1.py  client2.cpp  client2.py  client3.cpp  peer1.cpp  peer1.out  peer2.cpp  peer2.out  turn.cpp
applications/plugins/ZeroMQCommunication/Python/: client.py  server.py  server2.py
applications/plugins/ZeroMQCommunication/Responders/: alumno1.cpp  alumno1.out  alumno2.cpp  alumno2.out  alumno3.cpp  alumno3.out  alumno4.cpp
applications/plugins/ZeroMQCommunication/Senders/: rrclient.out  rrclient1.cpp  rrclient1.out  rrclient2.cpp  rrclient2.out
applications/plugins/ZeroMQCommunication/SofaTypeMessages/: SofaTypeMessages.cpp  SofaTypeMessages.h  main.cpp
applications/projects/runSofa/: Main.cpp
examples/: TorusFEM-3-0.005.comp
examples/Components/linearsolver/: MinResLinearSolver.scn
examples/Demos/: Test.scn
examples/Demos/CNVSSPlugin/: CNVSSPluginScene.scn
examples/Demos/Cystic_Scene/: Cyst_Visual.scn  GynecologyScene.scn  GynecologyScene_00000.mtl  LoadingObj.scn  Mailing_Simdesign.html  TestingTetrahedral.scn  TetraForOvary.scn  ovary.scn  ovary_mesh.mesh  ovary_mesh.msh
examples/meshes/: phantomTrial.msh
examples/scences/: meshExporterReady.scn  skin.scn  skinTetrahedronDestruction.scn
modules/SofaExporter/: MeshExporter.cpp  MeshExporter.h
modules/SofaGeneralSimpleFem/: src
share/mesh/Utero_V2/: AbdominalCavity.mtl  LastVersionRightFalopianTubeV4.blend  LastVersionRightFalopianTubeV4.blend1  LastVersionUteroAloneV4.blend  LastVersionUteroblend.blend  LastVersionUteroblend.mtl  LastVersionUteroblendV2.blend  LastVersionUteroblendV2.blend1  LastVersionUteroblendV2.mtl  LastVersionUteroblendV3.blend  LastVersionUteroblendV3.blend1  NewGynecologyScene.blend  Ovaries_Alone.blend  Ovaries_Alone.blend1  Ovaries_LastVersion.blend  Ovaries_LastVersion.blend1  Ovaries_LastVersion.mtl  Ovaries_LastVersionV2.mtl  Ovaries_LastVersion_V2.blend  Ovary_Alone.mtl  Ovary_Left_Alone.mtl  Ovary_Left_Mesh.mesh  Ovary_Left_Mesh_v3.msh  Ovary_Right_Mesh  Ovary_Right_Mesh.mesh  Ovary_Right_Mesh_V3.msh  SOFA.blend  SOFATesting.mtl  SOFATesting2.mtl  Thumbs.db  Tube_Alone.blend  Tube_Left_Alone.mtl  Tube_Left_Mesh.mesh  Tube_Left_Mesh.msh  Tube_Left_Mesh_V2  Tube_Left_Mesh_V2.ele  Tube_Left_Mesh_V2.gmsh  Tube_Left_Mesh_V2.mesh  Tube_Left_Mesh_V2.msh  Tube_Left_Mesh_V2.node  (+27 more)
